# icfpc2022

./: .gitignore  Cargo.toml  LICENSE  README.md
problems/: 36.json  37.json  38.json  39.json  40.json
scripts/: submit.sh
solutions/best/: 1.txt  10.txt  10_meta.json  11.txt  11_meta.json  12.txt  12_meta.json  13.txt  13_meta.json  14.txt  14_meta.json  15.txt  15_meta.json  16.txt  16_meta.json  17.txt  17_meta.json  18.txt  18_meta.json  19.txt  19_meta.json  1_meta.json  2.txt  20.txt  20_meta.json  21.txt  21_meta.json  22.txt  22_meta.json  23.txt  23_meta.json  24.txt  24_meta.json  25.txt  25_meta.json  26.txt  26_meta.json  27.txt  27_meta.json  28.txt  (+38 more)
src/: block.rs  canvas.rs  color.rs  dto.rs  gui.rs  main.rs  moves.rs  painting.rs  parser.rs  program.rs
src/cmd/: default.rs  mod.rs  stats.rs
src/moves/: color.rs  cost.rs  cut.rs  history_tester.rs  merge.rs  mod.rs  move.rs  swap.rs  undo.rs
src/moves/tests/: mod.rs
src/solvers/: annealing.rs  chain.rs  divide_conquer.rs  erase.rs  genetic.rs  mod.rs  no_op.rs  simple.rs  swapper.rs  top_color.rs
src/solvers/processors/: mod.rs  recolor.rs  recolorv2.rs  shake.rs  trim.rs
