[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs"}
image = { version = "0.24.3", default-features = false, features = ["png"] }

[features]
wayland = ["raylib/wayland"]
