[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
derive_more = "0.99.17"
image = { version = "0.24.3", default-features = false, features = ["png"] }
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs"}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[features]
wayland = ["raylib/wayland"]
