[package]
name = "icfpc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
colorgrad = { version = "0.6.1", default-features = false }
derive_more = "0.99.17"
image = { version = "0.24.3", default-features = false, features = ["png"] }
rand = "0.8.5"
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs"}
rayon = "1.5.3"
smartstring = { version = "^1.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
lexical-core = { version = "^0.8", default-features = false, features = ["write-integers", "parse-integers"] }
nalgebra = "^0.31"

[features]
wayland = ["raylib/wayland"]
